[package]
name = "chess-gif-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
gif = "0.13.3"
image = { version = "0.25.8", default-features = false, features = [
    "rayon",
    "gif",
    "png",
] }
itertools = "0.14.0"
pgn-reader = "0.28.0"
shakmaty = { version = "0.29.1", features = ["variant"] }
